--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>jetty-servlet</artifactId>
             <version>9.4.8.v20171121</version>
         </dependency>
+        <dependency>
+            <groupId>org.tensorflow</groupId>
+            <artifactId>tensorflow</artifactId>
+            <version>1.8.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>    
     
     <build>
